--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -75,12 +75,16 @@
 }
 
 .about-btn{
+    display: inline-block;
     background-color: var(--light-1);
     color: var(--main-color);
+    border-radius: 2rem;
+    font-size: 1rem;
+    padding: 0.6rem 1.5rem;
+    margin-top: 2rem;
     font-weight: 600;
-    margin-top: 3rem;
+    width: fit-content;
     transition: all 0.3s ease;
-    margin-left: 0;
 }
 
 .about-btn:hover{
