--- a/src/components/hireme/Hireme.css
+++ b/src/components/hireme/Hireme.css
@@ -1,47 +1,51 @@
-.hire .container{
+.hire {
+    background-color: var(--light-3);
+}
+
+.hire .container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.hire .title-sm{
+.hire .title-sm {
     margin: 1.5rem auto;
     color: var(--main-color);
 }
 
-.hire .text{
+.hire .text {
     font-size: 1.4rem;
 }
 
-.hire .main-btn{
+.hire .main-btn {
     margin: 2rem auto;
     transition: 0.3s ease;
 }
 
-.hire .main-btn:hover{
+.hire .main-btn:hover {
     transform: scale(1.05);
     transition: 0.3s ease;
 }
 
-.hire .fa-envelope{
+.hire .fa-envelope {
     margin-right: 0.8rem;
 }
 
-@media screen and (max-width: 850px){
-    .hire .container{
+@media screen and (max-width: 850px) {
+    .hire .container {
         padding: 0 1.8rem;
     }
 
-    .hire .text{
+    .hire .text {
         font-size: 1rem;
     }
 
-    .hire .hero-links{
+    .hire .hero-links {
         justify-content: center;
     }
 
-    .hire .hero-link{
+    .hire .hero-link {
         margin: 0;
         padding: 0 1rem;
     }
