--- a/src/components/skills/Skill.css
+++ b/src/components/skills/Skill.css
@@ -1,47 +1,48 @@
-.card-content{
+.card-content {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
-    background-color: var(--light-3);
+    background-color: var(--light-1);
     border-radius: 20px;
     padding: 2rem 2rem;
     width: 100%;
     max-width: 380px;
     min-height: 500px;
     margin: 1rem 1rem;
+    border: 2px solid var(--main-color);
 }
 
-.card-icon{
+.card-icon {
     width: 90px;
     margin-bottom: 1rem;
 }
 
-.cards-wrap{
+.cards-wrap {
     transition: all 0.3s ease;
 }
 
-.cards-wrap:hover{
+.cards-wrap:hover {
     transition: all 0.3s ease;
     transform: scale(1.08);
 }
 
-.card-content:hover{
-    background-color: var(--light-3-dark);
+.card-content:hover {
+    background-color: var(--light-3);
 }
 
-.skills-btn{
+.skills-btn {
     margin-left: 0;
     padding: 0.8rem 1.4rem;
 }
 
-.card-content .text{
+.card-content .text {
     color: var(--dark-2);
 }
 
-@media screen and (max-width: 850px){
-    .card-content{
+@media screen and (max-width: 850px) {
+    .card-content {
         margin: 1rem auto;
     }
 }
