--- a/src/components/techstack/Stack.css
+++ b/src/components/techstack/Stack.css
@@ -1,21 +1,21 @@
-.stack{
-    min-height: 100vh;
+.stack {
+    /* min-height: 100vh; */
     background-color: var(--light-2);
 }
 
-
-.logos{
+.logos {
     width: 100%;
-    max-width: 900px;
+    max-width: 1300px;
     margin: auto auto;
     margin-top: 4rem;
+    position: relative;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
-.logo-wrap{
+.logo-wrap {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,32 +24,31 @@
     margin: 2rem 3rem;
 }
 
-.logo-icon{
-    width: 70px;
+.logo-icon {
+    width: 56px;
     transition: 0.3s ease;
-    filter: grayscale(0);
+    /* filter: grayscale(100); */
 }
 
-.logo-icon:hover{
-    transform: scale(1.15);
+.logo-icon:hover {
+    transform: scale(1.2);
     transition: 0.3s ease;
-    filter: grayscale(100);
+    /* filter: grayscale(0); */
 }
 
-
-.logo-label{
-    font-size: 1rem;
+.logo-label {
+    font-size: 0.8rem;
     margin: 10px auto;
 }
 
-@media screen and (max-width:850px){
-    .stack .container{
+@media screen and (max-width: 850px) {
+    .stack .container {
         padding: 0 1.8rem;
     }
 }
 
-@media screen and (max-width:320px){
-    .stack-text{
+@media screen and (max-width: 320px) {
+    .stack-text {
         font-size: 1.4rem;
     }
 }
