--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,103 +1,106 @@
-.footer{
+.footer {
     background-color: var(--dark-1);
     padding-bottom: 2rem;
 }
 
-
-.footer .container{
+.footer .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     /* align-items: center; */
 }
 
-.footer-grid{
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: var(--dark-2);
+    margin: 3rem auto;
+}
+
+.footer-grid {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.footer-links{
+.footer-links {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.footer-logo{
+.footer-logo {
     display: flex;
     justify-content: center;
     align-items: flex-start;
     width: 200px;
 }
 
-
-.footer-col{
+.footer-col {
     height: 200px;
 }
 
-.footer a{
+.footer a {
     color: var(--dark-2);
     font-weight: 500;
 }
 
-.footer .text{
-    color: white;
+.footer .text {
+    color: var(--light-1);
     font-weight: 600;
 }
 
-.footer-socials .hero-link{
+.footer-socials .hero-link {
     padding: 0 0;
     margin-right: 1rem;
     color: var(--main-color);
 }
 
-.copyright{
+.copyright {
     margin: 1rem auto;
     margin-top: 3rem;
 }
 
-.copyright .text{
+.copyright .text {
     font-weight: 400;
     font-size: 1rem;
     color: var(--dark-2);
 }
 
-.footer-name{
+.footer-name {
     color: var(--main-color);
 }
 
-.footer .site-link{
+.footer .site-link {
     transition: 0.3s ease;
 }
 
-.footer .site-link:hover{
+.footer .site-link:hover {
     transition: 0.3s ease;
     color: var(--light-2);
 }
 
-@media screen and (max-width:850px){
-
-   
-    .footer .container{
-         padding: 0 1.8rem;
+@media screen and (max-width: 850px) {
+    .footer .container {
+        padding: 0 1.8rem;
     }
 
-    .footer-grid{
+    .footer-grid {
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
     }
 
-    .footer-col{
+    .footer-col {
         margin-top: 3rem;
         height: fit-content;
     }
 
-    .footer{
+    .footer {
         padding-bottom: 7rem;
     }
 
-    .footer-logo{
+    .footer-logo {
         width: 100%;
         max-width: 300px;
     }
