--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -55,8 +55,8 @@
 }
 
 .hero-btn:hover {
-    background-color: #057035;
-    color: white;
+    background-color: var(--main-color-dark);
+    color: var(--light-1);
     transform: scale(1.02);
     transition: 0.3s ease;
 }
