--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -105,7 +105,7 @@ img {
         z-index: 999;
         width: 100%;
         height: 4.5rem;
-        background-color: #fff;
+        background-color: var(--light-1);
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
             0 6px 20px 0 rgba(0, 0, 0, 0.19);
         border-top-left-radius: 1rem;
