--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,39 @@
-:root{
+:root {
     --dark-1: #333;
     --dark-2: #7a7a7a;
     --main-color: #058c42;
     --main-color-dark: #057236;
-    --light-1:#fff;
-    --light-2:#f9fafb;
+    --light-1: #fff;
+    --light-2: #f9fafb;
     --light-3: #f6f7fb;
     --light-3-dark: #eceef3;
 }
 
-*, *::before, *::after{
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
 
-body, button, input, textarea{
-    font-family: 'Poppins', sans-serif;
+body,
+button,
+input,
+textarea {
+    font-family: "Poppins", sans-serif;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-ul{
+ul {
     list-style: none;
 }
 
-.container{
+.container {
     max-width: 1400px;
     margin: 0 auto;
     padding: 0 4rem;
@@ -36,11 +41,11 @@ ul{
     z-index: 5;
 }
 
-.section{
+.section {
     padding: 7rem 0;
 }
 
-.main-btn{
+.main-btn {
     display: inline-block;
     background-color: var(--main-color);
     color: var(--light-1);
@@ -51,12 +56,12 @@ ul{
     width: fit-content;
 }
 
-.section-header{
+.section-header {
     text-align: center;
     margin-bottom: 2rem;
 }
 
-.title{
+.title {
     position: relative;
     display: inline-block;
     padding: 1rem;
@@ -66,7 +71,7 @@ ul{
     color: var(--dark-1);
 }
 
-.title::after{
+.title::after {
     content: "";
     position: absolute;
     width: 80px;
@@ -78,12 +83,12 @@ ul{
     transform: translateX(-50%);
 }
 
-.section-header .text{
+.section-header .text {
     color: var(--dark-2);
     font-size: 1.2rem;
 }
 
-.title-sm{
+.title-sm {
     color: var(--dark-1);
     font-weight: 700;
     font-size: 1.6rem;
